Bug 86609 - TOOLBAR: Paste no longer has paste special drop down in Impress/Draw
Summary: TOOLBAR: Paste no longer has paste special drop down in Impress/Draw
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.2.0 target:5.1.1
Keywords:
: 56540 (view as bug list)
Depends on:
Blocks: ImpressDraw-Toolbars
  Show dependency treegraph
 
Reported: 2014-11-23 07:18 UTC by Yousuf Philips (jay) (retired)
Modified: 2016-10-25 19:02 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-11-23 07:18:54 UTC
I noticed that Impress and Draw dont have the paste special drop down when i compare it with 4.3 daily. Was this removed on purpose? I tested this on a cleared profile just to double check.

Version: 4.4.0.0.alpha2+
Build ID: 797db638870f5c6192e72c0b4669b471788e16ea
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-11-20_03:50:17
Comment 1 A (Andy) 2014-11-23 08:18:50 UTC
Hi Jay,

I have it in IMPRESS and DRAW, but only after I have copied something to the clipboard.  As soon as I copy something I get the arrow next to PASTE icon.
But what is buggy: If I have already copied something to the clipboard before opening IMPRESS / DRAW it does not recognize it and I don't have PASTE SPECIAL arrow.  It works only if I copy something after I had already opened IMPRESS / DRAW.
In WRITER I don't have this problem.  Therefore, I personally would say this is a buggy behaviour.

LO 4.4.0.0.beta1, Win 8.1
Comment 2 Yousuf Philips (jay) (retired) 2014-11-23 10:09:55 UTC
Hi Andy,

Thanks for digging into the issue more as i had noticed that it was there sometime and not there other times and didnt spend the time to track down what was wrong with the behaviour. :D
Comment 3 Yousuf Philips (jay) (retired) 2015-03-24 02:57:05 UTC
This reminds me of the similar problem that happened in impress where the drop down is lost in the presentation toolbar (bug 83619).
Comment 4 Robinson Tryon (qubit) 2015-12-13 11:23:50 UTC Comment hidden (obsolete)
Comment 5 Maxim Monastirsky 2016-01-24 18:05:35 UTC
Regression from 2005, it seems...
Comment 6 Commit Notification 2016-01-24 21:05:09 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=12f11aa2ff0fd2ec8ecccf47501b9a6b1636b4ba

tdf#86609 sd: Fill Paste Special on initial update too

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Maxim Monastirsky 2016-01-24 21:06:24 UTC
Hope that it's the right fix.
Comment 8 Maxim Monastirsky 2016-01-24 21:09:07 UTC
*** Bug 56540 has been marked as a duplicate of this bug. ***
Comment 9 Yousuf Philips (jay) (retired) 2016-01-26 11:52:11 UTC
Looks like it to me. ;D

Version: 5.2.0.0.alpha0+
Build ID: c43fdd74097cb12f69f86fd1217dd2f41ccae101
CPU Threads: 2; OS Version: Linux 4.2; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-01-26_00:38:35
Locale: en-US (en_US.UTF-8)
Comment 10 Commit Notification 2016-02-02 09:02:50 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0086461be280ee1d77d7811c6d930812f6adb33a&h=libreoffice-5-1

tdf#86609 sd: Fill Paste Special on initial update too

It will be available in 5.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.