tdf#86609 sd: Fill Paste Special on initial update too

Regression of:

commit d51d59296d65e8ace8f2d898e757267d25f871b2
Date:   Tue Nov 8 08:06:05 2005 +0000

    INTEGRATION: CWS impress73 (1.59.32); FILE MERGED

Change-Id: I1a10957d36c38d559d69224ec744dbd8d446b8c2